syntax = "proto3";
package shakebook;
option go_package="shakebook/account/proto/api/v1;accountpb";
import "validate/validate.proto";

message Account {
  string user_name = 1;
  string password = 2;
}

message GetAccountRequest {
  int64 id = 1;
}

message GetAccountResponse {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
}

message CreateAccountRequest {
  string first_name  = 1 [(validate.rules).string.email = true];
  string last_name = 2 [(validate.rules).string.email = true];
  string password = 3 [(validate.rules).string.email = true];
  string phone = 4 [(validate.rules).string.email = true];
}

service AccountService {
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
  rpc CreateAccount (CreateAccountRequest) returns (GetAccountResponse);
}

